A lot of misc changes